<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mits.uwi.checkin_app.LocationReport">

    <TextView
        android:id="@+id/geofenceTestText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testing_geofences_capability"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/geofenceTestText"
        android:indeterminate="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkin_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:visibility="visible"
        android:textAlignment="center"
        android:id="@+id/isConnected"
        android:text="@string/finding_location"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@id/checkin_layout"
        android:layout_below="@id/pBar"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/mits_check_in"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/mits_check_in"
            android:enabled="false"/>
        <Button
            android:id="@+id/ms_check_in"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/medical_sciences_check_in"
            android:enabled="false"/>
        <Button
            android:id="@+id/st_check_in"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/science_amp_check_in"
            android:enabled="false"/>
        <Button
            android:id="@+id/so_check_in"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/sosci_check_in"
            android:enabled="false"/>
        <Button
            android:id="@+id/hu_check_in"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:text="@string/humed_check_in"
            android:enabled="false"/>


    </LinearLayout>
</RelativeLayout>
